@@ -363,11 +363,18 @@ function _calendar_setup_form($view_name) {
     '#description' => t('Whether or not to display a popup date selector to change the calendar period. (Only works when the Date Popup module is enabled.)')
     );
   $form['calendar_limit'] = array(
-    '#title' => t('Items to show'),
+    '#title' => t('Maximum items'),
     '#type' => 'select',
     '#options' => array(0 => t('Unlimited'), 3 => t('3 items'), 5 => t('5 items'), 10 => t('10 items')),
     '#default_value' => variable_get('calendar_limit_'. $view->name, 5),
-    '#description' => t('Maximum number of items to show in calendar cells, used to keep the calendar from expanding to a huge size when there are lots of items in one day. When there more items than this limit, a summary message with a link to the day view will be displayed instead.'),
+    '#description' => t('Maximum number of items to show in calendar cells, used to keep the calendar from expanding to a huge size when there are lots of items in one day. '),
+    );
+  $form['calendar_limit_behavior'] = array(
+    '#title' => t('Too many items'),
+    '#type' => $calendar_type != 'day' ? 'select' : 'hidden',
+    '#options' => array('more' => t("Show maximum, add 'more' link"), 'hide' => t('Hide all, add link to day')),
+    '#default_value' => variable_get('calendar_limit_behavior_'. $view->name, 'more'),
+    '#description' => t('Behavior when there are more than the above number of items in a single day. When there more items than this limit, a link to the day view will be displayed.'),
     );
 
   $display_options = array('calendar' => t('Calendar'), 'table' => t('Table'), 'teasers' => t('Teasers'), 'nodes' => t('Full Nodes'), 'list' => t('List'), '' => t('None'));
@@ -502,6 +509,9 @@ function _calendar_setup_form_submit($form_id, $form_values) {
         break;
     case 'calendar_limit':
         variable_set('calendar_limit_'. $view_name,  $value);
+        break;
+    case 'calendar_limit_behavior':
+        variable_set('calendar_limit_behavior_'. $view_name,  $value);
         break;
     case 'calendar_time_format':
         variable_set('calendar_time_format_'. $view_name,  $value);
